testdata/baselines/reference/submodule/compiler/jsExportMemberMergedWithModuleAugmentation3.errors.txt
/x.js(1,16): error TS2339: Property 'x' does not exist on type 'typeof import("/y")'.


==== /x.js (1 errors) ====
    module.exports.x = 1;
                   ~
!!! error TS2339: Property 'x' does not exist on type 'typeof import("/y")'.
    module.exports = require("./y.js");
    
==== /y.d.ts (0 errors) ====
    export declare type x = 1;
    